--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,7 +198,6 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  border-radius: 20%;
   background: url("../img/bg.jpg") top center;
   background-size: cover;
 }
@@ -315,6 +314,9 @@ section {
   margin-right: 5px;
   color: #149ddd;
   line-height: 0;
+}
+.about .col-lg-4{
+  border-radius: 20% ;
 }
 .about .content p:last-child {
   margin-bottom: 0;
